# labubu

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  alerting.json  go.mod  go.sum  pricing.yaml  trace_tmp.json
.claude/scripts/: ssh_build.py
.github/workflows/: release.yml
cmd/labubu/: main.go  main_config_test.go  main_test.go
docs/: api.md  architecture.md  deployment.md  project-structure.md  release.md  roadmap.md
docs/integrations/: claude-code-metrics.md
docs/issues/: multi-agent-trace-compatibility.md
internal/alerting/: api.go  api_test.go  engine.go  engine_test.go  notifier.go  notifier_test.go  setup.go  store.go  store_test.go  types.go
internal/api/: cost_handler.go  cost_handler_test.go  dashboard_handler.go  dashboard_handler_test.go  diagnosis_llm.go  diagnosis_llm_test.go  diagnosis_prompt.go  gzip.go  gzip_test.go  llm_config_handler.go  llm_config_handler_test.go  log_handler.go  log_handler_test.go  metrics_handler.go  metrics_handler_test.go  openapi.go  openapi_test.go  otlp_proto.go  otlp_trace.go  pricing_handler.go  router.go  session_handler.go  session_handler_test.go  trace_handler.go  trace_handler_test.go  trace_span_test.go
internal/log/: log.go
internal/metrics/: store.go  tstorage_store.go  tstorage_store_test.go
internal/pipeline/: pipeline.go  pipeline_test.go
internal/pricing/: pricing.go  pricing_test.go
internal/receiver/: logs_translator.go  metrics_translator.go  metrics_translator_test.go  otlp.go  otlp_test.go
internal/storage/: agent_stats.go  agent_stats_test.go  aggregate_traces_test.go  chdb.go  chdb_query.go  config.go  config_test.go  (+27 more)
labubu-mcp/: .gitignore  pyproject.toml
labubu-mcp/labubu_mcp/: __init__.py  __main__.py  api_client.py  formatters.py  server.py
labubu-mcp/labubu_mcp/tools/: __init__.py  logs.py  metrics.py  services.py  traces.py
labubu-mcp/tests/: conftest.py  test_api_client.py  test_formatters.py  test_logs.py  test_metrics.py  test_server.py  test_services.py  test_traces.py
labubu-python/: .gitignore  README.md  pyproject.toml
labubu-python/labubu/: __init__.py  __main__.py  cli.py
labubu-python/labubu/mcp/: __init__.py  __main__.py  formatters.py  server.py
labubu-python/labubu/mcp/tools/: __init__.py  logs.py  metrics.py  services.py  traces.py
labubu-python/tests/: test_cli.py
labubu-python/tests/mcp/: conftest.py  test_api_client.py  test_formatters.py  test_logs.py  test_metrics.py  test_server.py  test_services.py  test_traces.py
scripts/: deploy_remote.py  make_pass.py  send_live_metrics.go  send_test_metrics.go
web/: embed.go  embed_dev.go  embed_test.go  index.html  package-lock.json  package.json  vite.config.ts
(+114 files in other folders)
