[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labubu-mcp"
version = "0.1.0"
description = "MCP Server for Labubu — expose observability data to AI agents"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
labubu-mcp = "labubu_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
